Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travelling_schedule = None\n"
+    "travelling_schedule = None\n",
+    "\"I will be travelling 5 weeks starting in the month of January\""
    ]
   },
   {
