Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "travelling_schedule = None\n",
-    "\"I will be travelling 5 weeks starting in the month of January\""
+    "\"I will be travelling 5 weeks starting in the month of January\"\n"
    ]
   },
   {
