Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,12 +122,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "travelling_schedule = None\n",
-    "travelling_schedule =\"I will be travelling  starting in the month of January\"\n"
+    "travelling_schedule =\"I will be travelling number_of_weeks = 5 starting in the month of travel_month\"\n"
    ]
   },
   {
