--- a/index.ipynb
+++ b/index.ipynb
@@ -122,12 +122,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I will be travelling number_of_weeks = 5 starting in the month of travel_month'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travelling_schedule = None\n",
-    "travelling_schedule =\"I will be travelling number_of_weeks = 5 starting in the month of travel_month\"\n"
+    "travelling_schedule =\"I will be travelling number_of_weeks = 5 starting in the month of travel_month\"\n",
+    "travelling_schedule"
    ]
   },
   {
