--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
    ],
    "source": [
     "travelling_schedule = None\n",
-    "travelling_schedule =\"I will be travelling number_of_weeks = 5 starting in the month of travel_month\"\n",
+    "travelling_schedule =\"I will be travelling \"+number_of_weeks = 5 starting in the month of travel_month\"\n",
     "travelling_schedule"
    ]
   },
