--- a/index.ipynb
+++ b/index.ipynb
@@ -122,23 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'I will be travelling number_of_weeks = 5 starting in the month of travel_month'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-13-2b9103a144f3>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-2b9103a144f3>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    travelling_schedule =\"I will be travelling \"+number_of_weeks = 5+ starting in the month of\" + travel_month + \"\u001b[0m\n\u001b[0m                                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "travelling_schedule = None\n",
-    "travelling_schedule =\"I will be travelling \"+number_of_weeks = 5+ starting in the month of\" travel_month\"\n",
+    "travelling_schedule =\"I will be travelling \"+ number_of_weeks = 5 + starting in the month of\" + travel_month + \"\n",
     "travelling_schedule"
    ]
   },
