Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -122,21 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-f500cc438915>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-14-3b4d41b0296e>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-f500cc438915>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"I will be travelling\" + number_of_weeks + \"starting in the month of\" + travel_month +\u001b[0m\n\u001b[0m                                                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-3b4d41b0296e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"I will be travelling\" + number_of_weeks = 5 + \"starting in the month of\" +travel_month+\u001b[0m\n\u001b[0m                                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "travelling_schedule = None\n",
-    "\"I will be travelling\" + number_of_weeks + \"starting in the month of\" + travel_month + "
+    "\"I will be travelling\" + number_of_weeks = 5 + \"starting in the month of\" +travel_month+ "
    ]
   },
   {
