--- a/index.ipynb
+++ b/index.ipynb
@@ -122,21 +122,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-20-3e6a3e00f4c2>, line 2)",
+     "ename": "TypeError",
+     "evalue": "must be str, not int",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-3e6a3e00f4c2>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"I will be travelling\" + number_of_weeks + \"starting in the month of\"+travel_month+\u001b[0m\n\u001b[0m                                                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-93e9cc1f44f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtravelling_schedule\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;34m\"I will be travelling\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnumber_of_weeks\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"starting in the month of\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mtravel_month\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: must be str, not int"
      ]
     }
    ],
    "source": [
     "travelling_schedule = None\n",
-    "\"I will be travelling\" + number_of_weeks + \"starting in the month of\"+travel_month+ "
+    "\"I will be travelling\" + number_of_weeks + \"starting in the month of\"+travel_month"
    ]
   },
   {
