--- a/index.ipynb
+++ b/index.ipynb
@@ -122,21 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-23-cfc21f713c89>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-24-b39129f564a9>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-cfc21f713c89>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"I will be travelling\" + str(number_of_weeks ' ')\u001b[0m\n\u001b[0m                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-b39129f564a9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"I will be travelling\" + str(' 'number_of_weeks)\u001b[0m\n\u001b[0m                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "travelling_schedule = None\n",
-    "\"I will be travelling\" + str(number_of_weeks)\n",
+    "\"I will be travelling\" \" \"+ str(number_of_weeks)\n",
     "# \"starting in the month of\"+travel_month"
    ]
   },
