Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,24 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'I will be travelling 5'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-28-0d7db6dfa6b1>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-0d7db6dfa6b1>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"I will be travelling \" + str(number_of_weeks) \" starting in the month of\" +travel_month\u001b[0m\n\u001b[0m                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "travelling_schedule = None\n",
-    "\"I will be travelling \" + str(number_of_weeks)\n",
-    "# \"starting in the month of\"+travel_month"
+    "\"I will be travelling \" + str(number_of_weeks) \" starting in the month of\" +travel_month"
    ]
   },
   {
