--- a/index.ipynb
+++ b/index.ipynb
@@ -122,21 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-33-19c3bee349ec>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-39-4a292db0a4bf>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-19c3bee349ec>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"I will be travelling \" + str(number_of_weeks) \" starting in the month of \"\"\"\" + travel_month \"\"\"\"\"\"\u001b[0m\n\u001b[0m                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-4a292db0a4bf>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"I will be travelling \" + str(number_of_weeks) \" starting in the month of + travel_month + \"\"\"\u001b[0m\n\u001b[0m                                                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "travelling_schedule = None\n",
-    "\"I will be travelling \" + str(number_of_weeks) \" starting in the month of \"\"\"\" + travel_month \"\"\"\"\"\""
+    "\"I will be travelling \" + str(number_of_weeks) \" starting in the month of + travel_month + \"\"\""
    ]
   },
   {
