--- a/index.ipynb
+++ b/index.ipynb
@@ -122,21 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-39-4a292db0a4bf>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-41-5d2c72cc0296>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-4a292db0a4bf>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"I will be travelling \" + str(number_of_weeks) \" starting in the month of + travel_month + \"\"\"\u001b[0m\n\u001b[0m                                                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-5d2c72cc0296>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"I will be travelling \" + str(number_of_weeks) \" starting in the month of + travel_month + \" \"\u001b[0m\n\u001b[0m                                                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "travelling_schedule = None\n",
-    "\"I will be travelling \" + str(number_of_weeks) \" starting in the month of + travel_month + \"\"\""
+    "\"I will be travelling \" + str(number_of_weeks) \" starting in the month of + travel_month + \" \""
    ]
   },
   {
@@ -152,6 +152,27 @@
    "source": [
     "Great! In this lab, we were able to get some more practice with storing information in variables through assignment and reassignment."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
