Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,8 +135,7 @@
     }
    ],
    "source": [
-    "travelling_schedule = None\n",
-    "\"I will be travelling \" + str(number_of_weeks) \" starting in the month of + travel_month + \" \""
+    "travelling_schedule = "
    ]
   },
   {
