Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
     }
    ],
    "source": [
-    "travelling_schedule = "
+    "travelling_schedule = f\"I will  be travelling {number_of_weeks} weeks startinmg in  \""
    ]
   },
   {
